--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,43 @@
-# This is a basic workflow to help you get started with Actions
+name: Update TC Repo File
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:  # Manual trigger
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+  update-tc-repo:
+    runs-on: windows-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+    - name: Checkout Utility repo
+      uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+    - name: Clone TC-Repo
+      env:
+        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      run: |
+        git clone https://x-access-token:${env:GITHUB_TOKEN}@github.com/saran178/TC-Repo.git
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    - name: Copy and edit the file
+      shell: pwsh
+      run: |
+        $filePath = "TC-Repo\sample.txt"
+
+        # Read original content (optional)
+        $original = Get-Content $filePath
+        Write-Output "Original content:"
+        Write-Output $original
+
+        # Append a line to sample.txt
+        Add-Content $filePath "`nUpdated by Utility Action on $(Get-Date -Format 'yyyy-MM-dd HH:mm:ss')"
+
+    - name: Commit and push changes to TC-Repo
+      working-directory: TC-Repo
+      env:
+        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      shell: pwsh
+      run: |
+        git config user.name "saran178"
+        git config user.email "saran178@github.com"
+        git add sample.txt
+        git commit -m "Updated sample.txt from Utility repo via GitHub Actions"
+        git push https://x-access-token:${env:GITHUB_TOKEN}@github.com/saran178/TC-Repo.git main
