--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,8 +26,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
+          git config user.name "saran178"
+          git config user.email "saran178@users.noreply.github.com"
           git add sample.txt
           git commit -m "Update sample.txt via GitHub Actions"
           git push https://x-access-token:${GITHUB_TOKEN}@github.com/saran178/TC-Repo.git main
